Add Arch on Surface 3 post.

--- a/www/blog.html
+++ b/www/blog.html
@@ -57,7 +57,31 @@
               <div class="row item">
                 <div class="col-md-1 col-lg-1">
                   <p class="date-icon">
-                  Sep 21
+                  2017 Jan 13
+                  </p>
+                </div>
+                <div class="col-md-11 col-lg-11">
+                  <h3 class="title">
+                    <span>
+                      <a href="posts/post2.html">Running Arch Linux on a Surface 3</a>
+                    </span>
+                  </h3>
+                  <p class="experience-description">
+                  I run Arch Linux on all of my computers (except the <a href="https://bugzilla.kernel.org/show_bug.cgi?id=108331">tragedy of the 12" Macbook</a>) so using Windows on my Surface 3 created issues. Mostly, it was hard to view and edit OneNote files across my devices. I wanted to use <a href="https://sourceforge.net/projects/xournal/">Xournal</a>, an open-source note-taking app, which runs natively on GNU/Linux.
+                  </p>
+                  <p class="experience-description">
+                  Here are the steps I followed to get Arch up and running:
+                  </p>
+                  <p>
+                    <a href="posts/post2.html">Continue Reading &rarr;</a>
+                  </p>
+                </div>
+              </div>
+
+              <div class="row item">
+                <div class="col-md-1 col-lg-1">
+                  <p class="date-icon">
+                  2016 Sep 21
                   </p>
                 </div>
                 <div class="col-md-11 col-lg-11">
