Google Dynamic DNS on dd-wrt

--- a/www/blog.html
+++ b/www/blog.html
@@ -57,6 +57,27 @@
               <div class="row item">
                 <div class="col-md-1 col-lg-1">
                   <p class="date-icon">
+                  2017 Jul 16
+                  </p>
+                </div>
+                <div class="col-md-11 col-lg-11">
+                  <h3 class="title">
+                    <span>
+                      <a href="posts/post3.html">Updating Google Dynamic DNS on dd-wrt</a>
+                    </span>
+                  </h3>
+                  <p class="experience-description">
+After being worn down by <a href="https://www.noip.com/">noip.com</a> confirmation emails, I switched to Google Domains since they include dynamic DNS support with a domain purchase. Google DDNS was easy to set up on my ASUS RT-AC68U with its built-in support. However recently my router was mistakenly bringing down my connection due to DHCP issues so I immediately switched to dd-wrt. Everything about dd-wrt is great... except it has no built-in support for <a href="https://www.dd-wrt.com/wiki/index.php/DDNS_-_How_to_setup_Custom_DDNS_settings_using_embedded_inadyn_-_HOWTO#Secure_DDNS_Updates_Over_HTTPS.2FSSL">Dynamic DNS over HTTPS/SSL</a> which Google Domains requires!
+                  </p>
+                  <p>
+                    <a href="posts/post3.html">Continue Reading &rarr;</a>
+                  </p>
+                </div>
+              </div>
+
+              <div class="row item">
+                <div class="col-md-1 col-lg-1">
+                  <p class="date-icon">
                   2017 Jan 13
                   </p>
                 </div>
